--- a/main/resources/org/openjfx/poo/FXimportDetails.fxml
+++ b/main/resources/org/openjfx/poo/FXimportDetails.fxml
@@ -57,10 +57,10 @@
                                                 <Label text="Estado:" GridPane.columnIndex="2" />
                                                 <Label text="Nome:" GridPane.rowIndex="1" />
                                                 <Label text="CPF/CNPJ:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                                <TextField fx:id="tfImportNumber" styleClass="plain-content" GridPane.columnIndex="1" />
-                                                <TextField fx:id="tfImporterName" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                                <TextField fx:id="tfImportStatus" styleClass="plain-content" GridPane.columnIndex="3" />
-                                                <TextField fx:id="tfImporterID" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfImportNumber" editable="false" styleClass="plain-content" GridPane.columnIndex="1" />
+                                                <TextField fx:id="tfImporterName" editable="false" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfImportStatus" editable="false" styleClass="plain-content" GridPane.columnIndex="3" />
+                                                <TextField fx:id="tfImporterID" editable="false" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                                              </children>
                                           </GridPane>
                                           <Separator prefWidth="200.0">
@@ -101,14 +101,14 @@
                                                 <Label text="Peso:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                                                 <Label text="Restrito:" GridPane.rowIndex="3" />
                                                 <Label text="LI:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                                                <TextField fx:id="tfProductName" styleClass="plain-content" GridPane.columnIndex="1" />
-                                                <TextField fx:id="tfProductHeight" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                                <TextField fx:id="tfProductWidth" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                                <TextField fx:id="tfProductRestricted" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                                <TextField fx:id="tfProductManufacturer" styleClass="plain-content" GridPane.columnIndex="3" />
-                                                <TextField fx:id="tfProdutcLength" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                                                <TextField fx:id="tfProductWiegth" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                                                <TextField fx:id="tfProductLI" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                                                <TextField fx:id="tfProductName" editable="false" styleClass="plain-content" GridPane.columnIndex="1" />
+                                                <TextField fx:id="tfProductHeight" editable="false" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfProductWidth" editable="false" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                                <TextField fx:id="tfProductRestricted" editable="false" styleClass="plain-content" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                <TextField fx:id="tfProductManufacturer" editable="false" styleClass="plain-content" GridPane.columnIndex="3" />
+                                                <TextField fx:id="tfProdutcLength" editable="false" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                                <TextField fx:id="tfProductWiegth" editable="false" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                                                <TextField fx:id="tfProductLI" editable="false" styleClass="plain-content" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                                              </children>
                                           </GridPane>
                                           <HBox alignment="CENTER" maxHeight="300.0" minHeight="150.0" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
@@ -120,7 +120,7 @@
                                                 </StackPane>
                                                 <StackPane prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                                                    <children>
-                                                      <TextArea fx:id="taProductDescription" prefHeight="200.0" prefWidth="200.0" styleClass="plain-content" />
+                                                      <TextArea fx:id="taProductDescription" editable="false" prefHeight="200.0" prefWidth="200.0" styleClass="plain-content" />
                                                    </children>
                                                 </StackPane>
                                              </children>
@@ -141,7 +141,7 @@
                                                 <Insets top="40.0" />
                                              </VBox.margin>
                                              <children>
-                                                <TextArea fx:id="taImportPendig" prefHeight="200.0" prefWidth="200.0" stylesheets="@css/box.css" wrapText="true">
+                                                <TextArea fx:id="taImportPendig" editable="false" prefHeight="200.0" prefWidth="200.0" stylesheets="@css/box.css" wrapText="true">
                                                    <styleClass>
                                                       <String fx:value="information-pending" />
                                                       <String fx:value="plain-content" />
