--- a/main/resources/org/openjfx/poo/FXRequestImport.fxml
+++ b/main/resources/org/openjfx/poo/FXRequestImport.fxml
@@ -76,13 +76,14 @@
                                               <RowConstraints maxHeight="274.0" minHeight="10.0" prefHeight="236.0" vgrow="SOMETIMES" />
                                               <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="84.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="84.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="50.0" minHeight="6.0" prefHeight="50.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="105.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
                                             </rowConstraints>
                                              <children>
                                                 <Label text="Nome do Objeto:" />
-                                                <Label text="Dimensão:" GridPane.rowIndex="2" />
+                                                <Label text="Dimensões:" GridPane.rowIndex="2" />
                                                 <Label text="Descrição:" GridPane.rowIndex="1" />
                                                 <GridPane hgap="15.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                                   <columnConstraints>
@@ -110,10 +111,10 @@
                                                    </GridPane.margin>
                                                 </TextArea>
                                                 <TextField fx:id="tfName" GridPane.columnIndex="1" />
-                                                <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                                <Label text="Fabricante:" GridPane.rowIndex="4" />
-                                                <Label text="Restrito:" GridPane.rowIndex="5" />
-                                                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="50.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                                <TextField fx:id="tfManufacturer" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                                <Label text="Fabricante:" GridPane.rowIndex="5" />
+                                                <Label text="Restrito:" GridPane.rowIndex="6" />
+                                                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="50.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                                    <children>
                                                       <RadioButton fx:id="rbYes" mnemonicParsing="false" text="sim">
                                                          <toggleGroup>
@@ -123,10 +124,12 @@
                                                       <RadioButton fx:id="rbNot" mnemonicParsing="false" text="não" toggleGroup="$tgRestricted" />
                                                    </children>
                                                 </HBox>
-                                                <TextField fx:id="tfLI" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                                                <Label fx:id="lbLI" text="licença de importação" visible="false" GridPane.rowIndex="6" />
-                                                <Label text="Peso:" GridPane.rowIndex="3" />
-                                                <TextField fx:id="tfWeight" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                                <TextField fx:id="tfLI" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                                                <Label fx:id="lbLI" text="licença de importação" visible="false" GridPane.rowIndex="7" />
+                                                <Label text="Peso:" GridPane.rowIndex="4" />
+                                                <TextField fx:id="tfWeight" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                                <Label text="Quantidade:" GridPane.rowIndex="3" />
+                                                <TextField fx:id="tfAmount" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                              </children>
                                           </GridPane>
                                           <StackPane prefHeight="93.0" prefWidth="958.0">
