--- a/main/resources/org/openjfx/poo/FXImportAction.fxml
+++ b/main/resources/org/openjfx/poo/FXImportAction.fxml
@@ -84,8 +84,8 @@
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="90.0" prefWidth="130.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="250.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="90.0" prefWidth="130.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="110.0" prefWidth="180.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="100.0" prefWidth="255.0" />
                                              </columnConstraints>
                                              <rowConstraints>
                                                 <RowConstraints minHeight="45.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -97,10 +97,10 @@
                                              <children>
                                                 <Label text="Nome:" />
                                                 <Label text="Fabricante:" GridPane.columnIndex="2" />
-                                                <Label text="Altura:" GridPane.rowIndex="1" />
-                                                <Label text="Comprimento:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                                <Label text="Largura:" GridPane.rowIndex="2" />
-                                                <Label text="Peso:" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                                                <Label text="Altura (cm):" GridPane.rowIndex="1" />
+                                                <Label text="Comprimento (cm):" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                                <Label text="Largura (cm):" GridPane.rowIndex="2" />
+                                                <Label text="Peso (Kg):" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                                                 <Label text="Restrito:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
                                                 <Label text="LI:" GridPane.rowIndex="4" />
                                                 <TextField fx:id="tfProductName" editable="false" styleClass="plain-content" GridPane.columnIndex="1" />
